--- a/social-media/src/pages/home/profile/profile.css
+++ b/social-media/src/pages/home/profile/profile.css
@@ -28,6 +28,21 @@
     border: 3px solid white ;
 
 }
+.profileInfo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+.profileInfoName{
+    font-size: 24px;
+
+}
+.profileInfoDesc{
+    font-weight: 300;
+
+}
 
 .profileRightBottom{
     display: flex;
